@@ -55,7 +55,12 @@ us a note on ns-developers mailing list.</p>
 
 <h2>New API:</h2>
 <ul>
-<li></li>
+  <li>In Ipv4ClickRouting, the following APIs were added:
+    <ul>
+      <li>Ipv4ClickRouting::SetDefines(), accessible through ClickInternetStackHelper::SetDefines(), for the user to set Click defines from the ns-3 simulation file.</li>
+      <li>SIMCLICK_GET_RANDOM_INT click-to-simulator command for ns-3 to drive Click's random number generation.</li>
+    </ul>
+  </li>
 </ul>
 
 <h2>Changes to existing API:</h2>
